--- a/Pokedex/Base.lproj/Main.storyboard
+++ b/Pokedex/Base.lproj/Main.storyboard
@@ -8,6 +8,11 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="pokemonFont.ttf">
+            <string>PokemonSolidNormal</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
@@ -23,8 +28,38 @@
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="C2Z-05-KI8">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="65"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pokedex" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4xI-9G-OXd">
+                                        <rect key="frame" x="123" y="22" width="128" height="35"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="128" id="10r-jU-yRw"/>
+                                            <constraint firstAttribute="height" constant="35" id="5OE-d3-jzF"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="PokemonSolidNormal" family="Pokemon Solid" pointSize="29"/>
+                                        <color key="textColor" red="0.99194461107254028" green="0.99615627527236938" blue="0.99600595235824585" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BAs-mS-3DY">
+                                        <rect key="frame" x="339" y="27" width="28" height="25"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="25" id="Jy1-pV-s63"/>
+                                            <constraint firstAttribute="width" constant="28" id="Zij-Qh-6eg"/>
+                                        </constraints>
+                                        <state key="normal" title="Button" image="music.png"/>
+                                        <connections>
+                                            <action selector="musicBtnPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="wES-af-Vqh"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
                                 <color key="backgroundColor" red="1" green="0.396078431372549" blue="0.35686274509803922" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="BAs-mS-3DY" secondAttribute="trailing" constant="8" id="1JP-SV-PNj"/>
+                                    <constraint firstAttribute="bottom" secondItem="BAs-mS-3DY" secondAttribute="bottom" constant="8" id="4gi-8O-v9w"/>
+                                    <constraint firstItem="4xI-9G-OXd" firstAttribute="centerX" secondItem="C2Z-05-KI8" secondAttribute="centerX" id="Mo6-Xe-gqt"/>
+                                    <constraint firstItem="4xI-9G-OXd" firstAttribute="leading" secondItem="C2Z-05-KI8" secondAttribute="leading" constant="123" id="Odf-4y-jxE"/>
+                                    <constraint firstItem="4xI-9G-OXd" firstAttribute="top" secondItem="C2Z-05-KI8" secondAttribute="top" constant="22" id="UHJ-iW-2Zv"/>
+                                    <constraint firstAttribute="bottom" secondItem="4xI-9G-OXd" secondAttribute="bottom" constant="8" id="izt-LN-c74"/>
+                                    <constraint firstAttribute="trailing" secondItem="4xI-9G-OXd" secondAttribute="trailing" constant="124" id="rSz-BT-bRQ"/>
                                     <constraint firstAttribute="height" constant="65" id="tXb-al-aov"/>
                                 </constraints>
                             </view>
@@ -118,5 +153,6 @@
     <resources>
         <image name="4" width="120" height="120"/>
         <image name="bg.png" width="1920" height="1080"/>
+        <image name="music.png" width="100" height="100"/>
     </resources>
 </document>
