--- a/Pokedex/Base.lproj/Main.storyboard
+++ b/Pokedex/Base.lproj/Main.storyboard
@@ -140,11 +140,30 @@
                     <connections>
                         <outlet property="collection" destination="yOi-KT-9fB" id="5lY-Z7-m04"/>
                         <outlet property="searchBar" destination="KYw-Yy-e39" id="D4H-gq-h1K"/>
+                        <segue destination="9ie-Qt-XCF" kind="show" identifier="PokemonDetailVC" id="VbT-M2-uTa"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-79.200000000000003" y="137.18140929535232"/>
+        </scene>
+        <!--Pokemon DetailVC-->
+        <scene sceneID="cGe-sD-eqo">
+            <objects>
+                <viewController id="9ie-Qt-XCF" customClass="PokemonDetailVC" customModule="Pokedex" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="MsD-XE-z7Z"/>
+                        <viewControllerLayoutGuide type="bottom" id="Dwd-Nx-4pb"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="lO2-sx-tkZ">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Krb-95-Vu1" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="658" y="137"/>
         </scene>
     </scenes>
     <resources>
