--- a/Pokedex/Base.lproj/Main.storyboard
+++ b/Pokedex/Base.lproj/Main.storyboard
@@ -158,16 +158,66 @@
                     <view key="view" contentMode="scaleToFill" id="lO2-sx-tkZ">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7pf-rS-JUr">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="65"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hhc-7s-ScE">
+                                        <rect key="frame" x="8" y="34" width="35" height="23"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="35" id="ZMF-RE-XgY"/>
+                                            <constraint firstAttribute="height" constant="23" id="meh-ng-BEO"/>
+                                        </constraints>
+                                        <state key="normal" image="back"/>
+                                    </button>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xya-bR-eQh">
+                                        <rect key="frame" x="89" y="25" width="196" height="32"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="32" id="Otb-ZJ-0bF"/>
+                                            <constraint firstAttribute="width" constant="196" id="QAG-b8-j2E"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                        <color key="textColor" red="0.99194461107254028" green="0.99615627527236938" blue="0.99600595235824585" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="1" green="0.39607843139999999" blue="0.35686274509999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="Xya-bR-eQh" secondAttribute="bottom" constant="8" id="4Mj-bP-9bp"/>
+                                    <constraint firstItem="Hhc-7s-ScE" firstAttribute="leading" secondItem="7pf-rS-JUr" secondAttribute="leading" constant="8" id="Cik-6s-FCx"/>
+                                    <constraint firstAttribute="trailing" secondItem="Xya-bR-eQh" secondAttribute="trailing" constant="90" id="W37-8K-0KX"/>
+                                    <constraint firstAttribute="bottom" secondItem="Hhc-7s-ScE" secondAttribute="bottom" constant="8" id="sg0-ch-dzT"/>
+                                    <constraint firstItem="Xya-bR-eQh" firstAttribute="leading" secondItem="Hhc-7s-ScE" secondAttribute="trailing" constant="46" id="t8H-2b-LMk"/>
+                                </constraints>
+                            </view>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" contentHorizontalAlignment="center" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="9ZU-dv-ucm">
+                                <rect key="frame" x="16" y="73" width="343" height="29"/>
+                                <segments>
+                                    <segment title="Bio"/>
+                                    <segment title="Second"/>
+                                </segments>
+                            </segmentedControl>
+                        </subviews>
+                        <color key="backgroundColor" red="0.99194461107254028" green="0.99615627527236938" blue="0.99600595235824585" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="7pf-rS-JUr" firstAttribute="leading" secondItem="lO2-sx-tkZ" secondAttribute="leading" id="218-jV-lJR"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="9ZU-dv-ucm" secondAttribute="trailing" id="70m-li-x2l"/>
+                            <constraint firstItem="9ZU-dv-ucm" firstAttribute="leading" secondItem="lO2-sx-tkZ" secondAttribute="leadingMargin" id="BZj-ut-0Gy"/>
+                            <constraint firstItem="9ZU-dv-ucm" firstAttribute="top" secondItem="7pf-rS-JUr" secondAttribute="bottom" constant="8" id="KCK-1D-gkU"/>
+                            <constraint firstItem="7pf-rS-JUr" firstAttribute="top" secondItem="lO2-sx-tkZ" secondAttribute="top" id="bfx-gS-tSQ"/>
+                            <constraint firstAttribute="trailing" secondItem="7pf-rS-JUr" secondAttribute="trailing" id="fZD-Nc-jDC"/>
+                            <constraint firstItem="Dwd-Nx-4pb" firstAttribute="top" secondItem="7pf-rS-JUr" secondAttribute="bottom" constant="602" id="qOz-dc-Kvw"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Krb-95-Vu1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="658" y="137"/>
+            <point key="canvasLocation" x="656.79999999999995" y="136.28185907046478"/>
         </scene>
     </scenes>
     <resources>
         <image name="4" width="120" height="120"/>
+        <image name="back" width="100" height="67"/>
         <image name="bg.png" width="1920" height="1080"/>
         <image name="music.png" width="100" height="100"/>
     </resources>
